argocd/pihole/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: pihole
        image: pihole/pihole
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
        volumeMounts:
        - name: pihole-persistent-storage
          mountPath: /etc/pihole         
      volumes:
      - name: pihole-persistent-storage
        persistentVolumeClaim:
          claimName: pihole-config-logs-pvcrwx

---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingressroute
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.lab.member87.xyz`)
      kind: Rule
      services:
        - name: pihole-service
          port: 80
  tls:
    secretName: pihole-certificate-secret
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-service 
  namespace: pihole
spec:
  selector:
    app: pihole   
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole 
  labels:
    app: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.1.249
  selector:
    app: pihole
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
